--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,24 @@ version = "0.1.0"
 description = "API client for HashiCorp Consul"
 authors = ["Arden Shackelford <arden@ardens.tech>"]
 license = "Apache 2.0"
+packages = [
+    {include = "pyconsul"},
+    {include = "pyconsul/py.typed"}
+]
+
 
 [tool.poetry.dependencies]
-python = "^3.7,<=4.0"
-httpx = "^0.22.0"
+python = ">=3.8,<4.0"
+httpx = "^0.23.0"
 pydantic = "^1.9.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.testing.dependencies]
 pytest-cov = "^3.0.0"
-pylint = "^2.13.8"
+pylint = "^2.15.0"
 flake8 = "^4.0.1"
 mypy = "^0.950"
 respx = "^0.19.2"
+pytest = "^7.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
