--- a/.github/workflows/prs.yml
+++ b/.github/workflows/prs.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
-        poetry-version: [1.1.13]
+        python-version: [3.8, 3.9, 3.10]
+        poetry-version: [1.2.1]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -26,8 +26,9 @@ jobs:
       - name: Lint with flake8/pylint
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          poetry run flake8 pynomad/
-          poetry run pylint pynomad/
+          poetry run flake8 pyconsul/
+          poetry run pylint pyconsul/
+          poetry run mypy pyconsul/
       - name: Test with pytest
         run: |
-          poetry run pytest --cov=pynomad tests/ --junitxml=report.xml --cov-report xml
+          poetry run pytest --cov=pyconsul tests/ --junitxml=report.xml --cov-report xml
