--- a/.github/workflows/prs.yml
+++ b/.github/workflows/prs.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Lint with flake8/pylint
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          poetry run flake8 pyconsul/
-          poetry run pylint pyconsul/
-          poetry run mypy pyconsul/
+          poetry run flake8 hc_pyconsul/
+          poetry run pylint hc_pyconsul/
+          poetry run mypy hc_pyconsul/
       - name: Test with pytest
         run: |
-          poetry run pytest --cov=pyconsul tests/ --junitxml=report.xml --cov-report xml
+          poetry run pytest --cov=hc_pyconsul tests/ --junitxml=report.xml --cov-report xml
