--- a/.editorconfig
+++ b/.editorconfig
@@ -16,7 +16,7 @@ indent_style = space
 indent_size = 4
 ij_python_optimize_imports_sort_imports = true
 ij_python_optimize_imports_sort_names_in_from_imports = true
-ij_python_optimize_imports_join_from_imports_with_same_source = true
+ij_python_optimize_imports_join_from_imports_with_same_source = false
 
 [*.md]
 trim_trailing_whitespace = false
