--- a/.github/workflows/prs.yml
+++ b/.github/workflows/prs.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, "3.10"]
-        poetry-version: [1.2.1]
+        python-version: [3.9, "3.10"]
+        poetry-version: [1.2.2]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
