--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,4 +15,4 @@ jobs:
           python_version: "3.9"
           poetry_version: "1.2.2"
           ignore_dev_requirements: "yes"
-          pypi_token: ${{ secrets.PYPI_TOKEN }
+          pypi_token: ${{ secrets.PYPI_TOKEN }}
